[package]
name         = "crypsol_logger"
version      = "0.3.1"
edition      = "2024"
authors      = ["Zuhair Thabit<admin@crypsol.tech>"]
license      = "MIT"
description  = "Structured asynchronous logger for Rust services with CloudWatch, HTTP (Loki / Elasticsearch / custom), file, and console backends."
readme       = "README.md"
repository   = "https://github.com/crypsol/crypsol_logger"
documentation= "https://docs.rs/crypsol_logger"
keywords     = ["logging", "aws", "cloudwatch", "loki", "async"]
categories   = ["development-tools::debugging", "asynchronous"]

[dependencies]
aws-config              = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-sdk-cloudwatchlogs  = { version = "1.122.0", features = ["behavior-version-latest"] }
chrono                  = "0.4.44"
env_logger              = "0.11.10"
log                     = "0.4.29"
tokio                   = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
once_cell               = "1.21.4"
colored                 = "3.1.1"
serde_json              = "1"
reqwest                 = { version = "0.13.2", default-features = false, features = ["rustls", "json"] }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["rt", "macros", "test-util"] }


[package.metadata.docs.rs]
all-features = true
